:bug: Fix spacing.

--- a/frontend/scss/components/organisms/header.scss
+++ b/frontend/scss/components/organisms/header.scss
@@ -104,7 +104,7 @@
     padding-top: 8px;
     /* Pull out to have a 100% width border */
     margin-left: -30px;
-    padding-left: 145px;
+    padding-left: 146px;
     padding-bottom: 8px;
     border-top: 1px solid color('wild-sand');
 
